--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,11 @@
-/*===== GOOGLE FONTS =====*/
+/*GOOGLE FONTS*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-/*===== VARIABLES CSS =====*/
+/* VARIABLES CSS */
 :root {
   --header-height: 3rem;
   --font-semi: 600;
-  /*===== Colores =====*/
-  /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
-  /* HSL color mode */
+  /* Colores */
+  
   --hue-color: 148;
   --first-color: hsl(var(--hue-color), 89%, 60%);
   --second-color: hsl(var(--hue-color), 56%, 12%);
@@ -317,7 +316,7 @@ img {
     width: 35%;
 }
 .skills__copy{
-    width: 85%;
+    width: 55%;
 }
 .skills__img{
     border-radius:0.5rem;
@@ -347,11 +346,6 @@ img {
   text-align: justify;
 }
   
-  /* .work__img {
-    box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-    border-radius: .5rem;
-    overflow: hidden;
-  } */
   
   .work__img img {
     
